--- a/conf/index.html
+++ b/conf/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="robots" content="noindex, nofollow">
 <title>LNMP一键安装包 by Licess</title>
 <meta charset="utf-8">
 <meta name="author" content="Licess">
@@ -31,15 +32,9 @@ font-family:"Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB
 
 <p>查看本地环境: <a href="/p.php" target="_blank" class="links">探针</a>&nbsp;&nbsp;<a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>&nbsp;&nbsp;<a href="/phpmyadmin/" target="_blank" class="links">phpMyAdmin</a>(为了安全，建议将phpmyadmin目录重命名为不容易猜到的目录！)</p>
 
-<p>更多LNMP一键安装包信息请访问: <a href="https://lnmp.org" target="_blank">https://lnmp.org</a></p>
-<p>LNMP一键安装包常见问题: <a href="https://lnmp.org/faq.html" target="_blank">https://lnmp.org/faq.html</a></p>
-<p>LNMP一键安装包问题反馈&使用交流: <a href="https://bbs.vpser.net/forum-25-1.html" target="_blank">https://bbs.vpser.net/forum-25-1.html</a></p>
-<p>VPS相关教程: <a href="https://www.vpser.net/vps-howto" target="_blank">https://www.vpser.net/vps-howto</a></p>
-<p>美国VPS推荐: <a href="https://www.vpser.net/ten-dollars-vps" target="_blank">https://www.vpser.net/ten-dollars-vps</a></p>
 
 <div align="center"><b>声明：出现该页面只说明您当前访问的域名/网站使用了LNMP一键安装包搭建的环境，当前域名/网站与LNMP一键安装包、VPS侦探和licess不存在任何关系！</b></div>
 
-<div align="center"><h3><a href="https://lnmp.org" target="_blank">LNMP一键安装包</a> by <a href="http://blog.licess.com" target="_blank">Licess</a> & <a href="https://www.vpser.net" target="_blank">VPS侦探</a></h3></div>
 </div>
 </body>
 </html>
